--- a/tiktok-clone/package.json
+++ b/tiktok-clone/package.json
@@ -18,6 +18,7 @@
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.2.0",
     "vue": "^3.5.13",
+    "vue-advanced-cropper": "^2.8.9",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
